# bit

./: .gitignore  Cargo.toml  EXAMPLES.md  FEATURES.md  FEATURE_RECOMMENDATIONS.md  IMPLEMENTATION_SUMMARY.md  LICENSE  MATH_EXPRESSION_FEATURE.md  OPERATION_SYSTEM.md  PATTERN_HIGHLIGHTING.md  README.md  RENDERING_PROGRESS.md  TRUNCATE_BITS_FEATURE.md  fix_tests.py  settings.json  worksheet_1.json  worksheet_2.json  worksheet_3.json
docs/: frame_width_detection.md
src/: app.rs  bit_viewer.rs  byte_viewer.rs  file_io.rs  lib.rs  main.rs  main_new.rs  operations.rs  pattern_locator.rs  session.rs  settings.rs  worksheet.rs
src/analysis/: frame_width.rs  mod.rs  pattern_locator.rs
src/core/: mod.rs  types.rs
src/processing/: interleaver.rs  mod.rs  operations.rs
src/storage/: file_io.rs  mod.rs  session.rs  settings.rs  worksheet.rs
src/ui/: mod.rs  operations_panel.rs  patterns_panel.rs  settings_panel.rs  top_panel.rs  windows.rs  worksheets_panel.rs
src/utils/: math_eval.rs  mod.rs
src/viewers/: bit_viewer.rs  byte_viewer.rs  mod.rs
tests/: operations_tests.rs  pattern_locator_tests.rs
