[package]
name = "bit"
version = "0.1.0"
edition = "2024"

[lib]
name = "bit"
path = "src/lib.rs"

[dependencies]
eframe = "0.33"
egui = "0.33"
egui_plot = "0.34"
egui_extras = "0.33"
bitvec = "1.0"
rfd = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs = "5.0"

[dev-dependencies]
tempfile = "3.15"

[[bin]]
name = "bit"
path = "src/main.rs"
